--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_card: ^2.0.0
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
